Add async callback handler, update Config, update swagger docs
